Fix center alignment for score

--- a/src/App.css
+++ b/src/App.css
@@ -70,7 +70,7 @@ body {
 }
 
 td.scoreboard__score {
-  text-align: centre;
+  text-align: center;
   background-color: azure;
   color: #282c34;
   border-radius: 5px;
